move homepage to its own template, add splashy map

--- a/templates/base.html
+++ b/templates/base.html
@@ -88,19 +88,7 @@
 
     <!-- Main Content -->
     <main class="container my-4">
-        {% block content %}
-        <div class="row">
-            <div class="col-12">
-                <h1 class="mb-4">MapRVA Georeference Tool</h1>
-                <p class="lead">Georeference historical images of Richmond!</p>
-                <div class="mb-4">
-                    <a href="/georeference/" class="btn btn-success btn-lg">
-                        <i class="fas fa-map-marker-alt me-2"></i>Let's Go
-                    </a>
-                </div>
-            </div>
-        </div>
-        {% endblock %}
+        {% block content %}{% endblock %}
     </main>
 
     <!-- Footer -->
