--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
                 <i class="fas fa-map-marker-alt me-2"></i>Contribute
             </a>
             <a href="/browse/" class="btn btn-secondary btn-med">
-                <i class="fas fa-map-marker-alt me-2"></i>Browse Sources
+                <i class="fas fa-eye me-2"></i>Browse Sources
             </a>
         </div>
     </div>
