add geolocation control to homepage map

--- a/templates/images/partials/map_display.html
+++ b/templates/images/partials/map_display.html
@@ -42,6 +42,15 @@ document.addEventListener('DOMContentLoaded', function() {
 
     map.addControl(new maplibregl.NavigationControl());
     map.addControl(new maplibregl.FullscreenControl());
+    
+    {% if geolocate %}
+    map.addControl(new maplibregl.GeolocateControl({
+        positionOptions: {
+            enableHighAccuracy: true
+        },
+        trackUserLocation: true
+    }));
+    {% endif %}
 
     map.on('load', async function() {
         try {
