--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,10 @@
 </div>
 </main>
 
-<!-- Full-width map for homepage -->
+<!-- Full-width map, pulling from all sources -->
 <div class="container-fluid px-0 mb-4">
     <div class="map-container">
-        {% include 'images/partials/map_display.html' with map_id='homepage-map' height='60vh' border_radius='0' %}
+        {% include 'images/partials/map_display.html' with map_id='homepage-map' height='60vh' border_radius='0' geolocate=True %}
     </div>
 </div>
 
