--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
     {% block extra_css %}{% endblock %}
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
@@ -92,7 +92,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-light py-4 mt-5">
+    <footer class="bg-light py-4 mt-auto">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
