add gap between homepage buttons

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <div class="col-12">
         <h1 class="mb-4">MapRVA Georeference Tool</h1>
         <p class="lead">Georeference historical images of Richmond!</p>
-        <div class="mb-4">
+        <div class="mb-4 d-flex gap-2">
             <a href="/georeference/" class="btn btn-success btn-med">
                 <i class="fas fa-map-marker-alt me-2"></i>Contribute
             </a>
