--- a/templates/images/image_detail.html
+++ b/templates/images/image_detail.html
@@ -312,7 +312,7 @@
 
                             {% if image.description %}
                                 <dt class="col-sm-5">Description:</dt>
-                                <dd class="col-sm-7">{{ image.description|truncatewords:20 }}</dd>
+                                <dd class="col-sm-7">{{ image.description }}</dd>
                             {% endif %}
 
                             {% if image.skip_count > 0 %}
